--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <label for="revision">Revision:</label>
         <select id="revision" name="revision" required>
           <option value="">Select Revision</option>
+          <option value="hd">hd</option>
           <option value="554">554</option>
           <option value="592">592</option>
           <option value="643">643</option>
@@ -136,7 +137,7 @@
             })
             .catch(error => {
               console.error("Error fetching data:", error);
-              alert("Failed to retrieve data. Please check revision and type.");
+              alert(`Failed to retrieve data, data matching ${revision}-${type} may not exist.`);
             });
         });
 
