--- a/index.html
+++ b/index.html
@@ -78,23 +78,27 @@
     </div>
     <div class="container">
       <form>
-        <label for="revision">Revision:</label>
-        <select id="revision" name="revision" required>
-          <option value="">Select Revision</option>
-          <option value="hd">hd</option>
-          <option value="554">554</option>
-          <option value="592">592</option>
-          <option value="643">643</option>
-          <option value="718">718</option>
-          <option value="910">910</option>
-        </select>
-        <label for="type">Type:</label>
-        <select id="type" name="type" required>
-          <option value="">Select Type</option>
-          <option value="obj">obj</option>
-          <option value="item">item</option>
-          <option value="npc">npc</option>
-          <option value="gfx">gfx</option>
+        <label for="data-file">Data File:</label>
+        <select id="data-file" name="data-file" required>
+            <option value="">Select File</option>
+            <option value="554-npc">554-npc</option>
+            <option value="554-obj">554-obj</option>
+            <option value="592-npc">592-npc</option>
+            <option value="592-obj">592-obj</option>
+            <option value="643-gfx">643-gfx</option>
+            <option value="643-item">643-item</option>
+            <option value="643-npc">643-npc</option>
+            <option value="643-obj">643-obj</option>
+            <option value="718-item">718-item</option>
+            <option value="718-obj">718-obj</option>
+            <option value="910-item">910-item</option>
+            <option value="910-obj">910-obj</option>
+            <option value="910-obj.txt">910-obj.txt</option>
+            <option value="hd-anim">hd-anim</option>
+            <option value="hd-gfx">hd-gfx</option>
+            <option value="hd-item">hd-item</option>
+            <option value="hd-npc">hd-npc</option>
+            <option value="hd-obj">hd-obj</option>
         </select>
         <label for="search-box">Search:</label>
         <input type="text" id="search-box" placeholder="Search models">
@@ -119,16 +123,16 @@
         searchForm.addEventListener("submit", (event) => {
           event.preventDefault(); // Prevent default form submission
 
-          const revision = document.getElementById("revision").value;
-          const type = document.getElementById("type").value;
+          const dataFile = document.getElementById("data-file").value;
+
           const searchTerm = searchBox.value.toLowerCase(); // Convert search term to lowercase
 
-          if (!revision || !type) {
-            alert("Please select both revision and type.");
+          if (!dataFile) {
+            alert("Please select a data file.");
             return;
           }
 
-          const filename = `data/${revision}-${type}.json`; // Construct filename based on selection
+          const filename = `data/${dataFile}.json`; // Construct filename based on selection
           fetch(filename)
             .then(response => response.json())
             .then(data => {
@@ -137,11 +141,11 @@
             })
             .catch(error => {
               console.error("Error fetching data:", error);
-              alert(`Failed to retrieve data, data matching ${revision}-${type} may not exist.`);
+              alert(`Failed to retrieve data, data file ${dataFile} may not exist.`);
             });
         });
 
-        // Fuzzy search function (replace with your preferred library)
+
         function fuzzySearch(searchTerm, data) {
           // Implement your fuzzy search logic here
           // This is a basic example using string search
