corrected all data

--- a/index.html
+++ b/index.html
@@ -80,25 +80,30 @@
       <form>
         <label for="data-file">Data source:</label>
         <select id="data-file" name="data-file" required>
-            <option value="">Select File</option>
-            <option value="554-npc">554-npc</option>
-            <option value="554-obj">554-obj</option>
-            <option value="592-npc">592-npc</option>
-            <option value="592-obj">592-obj</option>
-            <option value="643-gfx">643-gfx</option>
-            <option value="643-item">643-item</option>
-            <option value="643-npc">643-npc</option>
-            <option value="643-obj">643-obj</option>
-            <option value="718-item">718-item</option>
-            <option value="718-obj">718-obj</option>
-            <option value="910-item">910-item</option>
-            <option value="910-obj">910-obj</option>
-            <option value="910-obj.txt">910-obj.txt</option>
-            <option value="hd-anim">hd-anim</option>
-            <option value="hd-gfx">hd-gfx</option>
-            <option value="hd-item">hd-item</option>
-            <option value="hd-npc">hd-npc</option>
-            <option value="hd-obj">hd-obj</option>
+          <option value="">Select File</option>
+          <option value="554-npc">554-npc</option>
+          <option value="554-obj">554-obj</option>
+          <option value="592-npc">592-npc</option>
+          <option value="592-obj">592-obj</option>
+          <option value="643-item">643-item</option>
+          <option value="643-npc">643-npc</option>
+          <option value="643-obj">643-obj</option>
+          <option value="718-item">718-item</option>
+          <option value="718-obj">718-obj</option>
+          <option value="910-item">910-item</option>
+          <option value="910-obj">910-obj</option>
+          <option value="hd-item">hd-item</option>
+          <option value="hd-npc">hd-npc</option>
+          <option value="hd-obj">hd-obj</option>
+          <option value="os-item-219">os-item-219</option>
+          <option value="os-item-220">os-item-220</option>
+          <option value="os-item-221">os-item-221</option>
+          <option value="os-npc-219">os-npc-219</option>
+          <option value="os-npc-220">os-npc-220</option>
+          <option value="os-npc-221">os-npc-221</option>
+          <option value="os-obj-219">os-obj-219</option>
+          <option value="os-obj-220">os-obj-220</option>
+          <option value="os-obj-221">os-obj-221</option>
         </select>
         <label for="search-box">Search:</label>
         <input type="text" id="search-box" placeholder="Search models">
