removed labels from form to make the app more suitable for mobile

--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
     </div>
     <div class="container">
       <form>
-        <label for="data-file">Data source:</label>
         <select id="data-file" name="data-file" required>
-          <option value="">Select File</option>
+          <option value="">Select data source</option>
           <option value="554-npc">554-npc</option>
           <option value="554-obj">554-obj</option>
           <option value="592-npc">592-npc</option>
@@ -105,7 +104,6 @@
           <option value="os-obj-220">os-obj-220</option>
           <option value="os-obj-221">os-obj-221</option>
         </select>
-        <label for="search-box">Search:</label>
         <input type="text" id="search-box" placeholder="Search models">
         <button type="submit">Search</button>
       </form>
